--- a/src/css/style.css
+++ b/src/css/style.css
@@ -206,6 +206,21 @@ button {
   grid-column: 3;
 }
 
+/* Product Details Discount Section */
+#productListPrice {
+  display: none;
+}
+
+#listPrice {
+  text-decoration: line-through;
+  color: rgb(100, 100, 100);
+}
+
+#discountPercentage {
+  color: red;
+  margin-left: 8px;
+}
+
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
