--- a/src/css/style.css
+++ b/src/css/style.css
@@ -264,6 +264,19 @@ button {
   background-color: #a30008;
 }
 
+/*Product List Page*/
+.product-list-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  text-align: center;
+}
+
+
+footer {
+  font-size: var(--small-font);
+  padding: 1em;
+}
+
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
@@ -278,7 +291,3 @@ button {
   }
 }
 
-footer {
-  font-size: var(--small-font);
-  padding: 1em;
-}
