--- a/src/css/style.css
+++ b/src/css/style.css
@@ -114,6 +114,16 @@ button {
   fill: gray;
 }
 
+#cart-count {
+  position: absolute;
+  top: 5px;
+  right: 0;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+}
+
 /* End cart icon styles */
 
 .mission {
