--- a/src/css/style.css
+++ b/src/css/style.css
@@ -281,6 +281,14 @@ button {
   text-align: center;
 }
 
+.product-list-grid figure img {
+  transition: transform 0.3s ease-in-out; /* Smooth transition */
+}
+
+.product-list-grid figure img:hover {
+  transform: scale(1.1); /* Slightly enlarge the image */
+}
+
 footer {
   font-size: var(--small-font);
   padding: 1em;
