--- a/src/css/style.css
+++ b/src/css/style.css
@@ -170,29 +170,36 @@ button {
   font-size: 1em;
 }
 /* End product list card */
-
 .product-detail {
   padding: 1em;
   max-width: 500px;
   margin: auto;
 }
-
 .product-detail img {
   width: 100%;
 }
 
+/* Cart Styling Section */
 .cart-card {
   display: grid;
   grid-template-columns: 25% auto 15%;
   font-size: var(--small-font);
-  padding-top: 25px;
+  padding: 25px;
   align-items: center;
   position: relative;
+  max-width: 1000px;
+  width: 100%;
+  box-sizing: border-box;
+  border-bottom: 1px solid #ccc;
 }
-
 .cart-card__image {
   grid-row: 1/3;
   grid-column: 1;
+}
+.cart-card__image img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 .cart-card p {
   margin-top: 0;
@@ -201,22 +208,18 @@ button {
   grid-row: 1;
   grid-column: 2;
 }
-
 .cart-card__color {
   grid-row: 2;
   grid-column: 2;
 }
-
 .cart-card__quantity {
   grid-row: 1;
   grid-column: 3;
 }
-
 .cart-card__price {
   grid-row: 2;
   grid-column: 3;
 }
-
 .cart-card__remove {
   position: absolute;
   top: 5px;
@@ -228,21 +231,26 @@ button {
   padding: none;
   transition: transform 0.2s ease-in-out;
 }
-
 .cart-card__remove:hover {
   transform: scale(1.1);
 }
+/* Ensure all cart cards are the same width */
+.cart-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centers them for uniformity */
+  width: 100%; /* Ensure the parent container spans full width */
+}
+
 
 /* Product Details Discount Section */
 #productListPrice {
   display: none;
 }
-
 #listPrice {
   text-decoration: line-through;
   color: rgb(100, 100, 100);
 }
-
 #discountPercentage {
   color: red;
   margin-left: 8px;
@@ -280,13 +288,32 @@ button {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   text-align: center;
 }
-
 .product-list-grid figure img {
-  transition: transform 0.3s ease-in-out; /* Smooth transition */
+  transition: transform 0.3s ease-in-out;
+}
+.product-list-grid figure img:hover {
+  transform: scale(1.1);
 }
 
-.product-list-grid figure img:hover {
-  transform: scale(1.1); /* Slightly enlarge the image */
+/* Checkout Section */
+form {
+  max-width: 1000px;
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+label {
+  font-weight: bold;
+}
+input, textarea  {
+  width: 100%;
+  padding: 8px; font-size: 16px;
+}
+.order-summary {
+  display: flex;
+  justify-content: space-between;
 }
 
 footer {
