Bug with JWT-decode module

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -381,6 +381,35 @@ textarea {
   background-color: darkgreen;
 }
 
+/* Order Page Section */
+#orders{
+  margin: 20px auto;
+
+}
+table {
+  width: 80%;
+  border-collapse: collapse;
+  background: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+}
+th, td {
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+th {
+  background-color: #d8741c;
+  color: black;
+}
+tr:hover {
+  background-color: #f1f1f1;
+}
+td {
+  color: #333;
+}
+
 footer {
   font-size: var(--small-font);
   padding: 1em;
